Dedup discovery manager